traefik_yml/service.yaml
# 为traefik服务创建service, 为外部开放使用
apiVersion: v1
kind: Service
metadata:
  name: traefik-svc
  namespace: traefik
spec:
  selector:
    app: traefik
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
    - name: admin
      port: 8080
      targetPort: 8080
